# Adafruit_CircuitPython_MMA8451

./: adafruit_mma8451.py  pyproject.toml
